--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,14 @@ a:hover {
 
 /*--/ Sections /--*/
 
+section {
+  padding: 60px 0;
+  overflow: hidden;
+}
+.section-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
 .sect-4 {
   padding: 4rem 0;
 }
@@ -171,8 +179,13 @@ a:hover {
 }
 
 .title-left {
+  text-align: center;
   font-size: 2rem;
   position: relative;
+}
+.title-about {
+  text-align: center;
+  padding-bottom: 30px;
 }
 
 .title-left:before {
@@ -820,6 +833,30 @@ a:hover {
   font-size: 1.2rem;
 }
 
+/*======================================
+//--//-->   PORTFOLIO slide image
+======================================*/
+.slider{
+  position: relative;
+  background: #000116;
+  width: 800px;
+  min-height: 500px;
+  margin: 20px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.slider .slide{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  clip-path: circle(0% at 0 50%);
+}
+
+.slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+}
 /*======================================
 //--//-->   TESTIMONIALS
 ======================================*/
